<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grid_planners_demo</name>
  <version>0.0.0</version>
  <description>The grid_planners_demo package</description>
  <maintainer email="silvas1@cardiff.ac.uk">Steven Silva</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <build_depend>rclpy</build_depend>
  <build_export_depend>rclpy</build_export_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
