<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sampling_planners_demo</name>
  <version>0.0.0</version>
  <description>The sampling_planners_demo package</description>
  <maintainer email="silvas1@cardiff.ac.uk">Steven Silva</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>rclpy</build_export_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- tf/tf2 -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <!-- msgs -->
  <depend>sensor_msgs</depend>

  <!-- OMPL -->
  <depend>ompl</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
